<package format="2">
<name>ar_track_alvar</name>
<version>0.7.1</version>
<description>
This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
</description>
<author email="sniekum@cs.umass.edu">Scott Niekum</author>
<maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
<maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>
<license>LGPL-2.1</license>
<url type="website">http://ros.org/wiki/ar_track_alvar</url>

 <buildtool_depend>ament_cmake</buildtool_depend>
<depend>ar_track_alvar_msgs</depend>
<depend>cv_bridge</depend>
<depend>geometry_msgs</depend>
<depend>image_transport</depend>
<depend>pcl_conversions</depend>
<depend>perception_pcl</depend>
<depend>rclcpp</depend>
<depend>rclpy</depend>
<depend>resource_retriever</depend>
<depend>sensor_msgs</depend>
<depend>std_msgs</depend>
<depend>tf2</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
<depend>tinyxml2</depend>
<depend>visualization_msgs</depend>
<depend>libopencv-dev</depend>
<depend>eigen</depend>
<depend>libpcl-all-dev</depend>
<!-- <build_depend>cmake_modules</build_depend> -->


<test_depend>ament_cmake_gtest</test_depend>
<test_depend>rosbag2</test_depend>
<export>
<build_type>ament_cmake</build_type>
</export>

</package>
