<package format="2">
<name>ar_track_alvar</name>
<version>0.7.1</version>
<description>
This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
</description>
<author email="sniekum@cs.umass.edu">Scott Niekum</author>
<maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
<maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>
<license>LGPL-2.1</license>
<url type="website">http://ros.org/wiki/ar_track_alvar</url>

 <buildtool_depend>ament_cmake</buildtool_depend>
<depend>ar_track_alvar_msgs</depend>
<depend>cv_bridge</depend>
<depend>geometry_msgs</depend>
<depend>image_transport</depend>
<depend>pcl_conversions</depend>
<depend>perception_pcl</depend>
<depend>rclcpp</depend>
<depend>rclpy</depend>
<depend>resource_retriever</depend>
<depend>sensor_msgs</depend>
<depend>std_msgs</depend>
<depend>tf2</depend>
<depend>rosbag2_bag_v2_plugins</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
<depend>tinyxml2</depend>
<depend>visualization_msgs</depend>
<depend>libopencv-dev</depend>
<depend>eigen</depend>
<depend>libpcl-all-dev</depend>


  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>python3-opencv</test_depend>
  <test_depend>python_cmake_module</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>rosbag2</test_depend>
<export>
<build_type>ament_cmake</build_type>
</export>

</package>
