<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar_track_alvar_msgs</name>
  <version>0.7.1</version>
  <description>
  This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
  </description>
  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
  <maintainer email="gm130s@gmail.com">Isaac I.Y. Saito</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ar_track_alvar</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
